# manolo-deliv-wp2

./: README.md  feat_extract.py
aibio2025/: license.odt  main.bbl  main.tex  review-AIBio.text
aibio2025/doc/: refs.bib
aibio2025/doc/results/: results.ods
aibio2025/ppt/: beamercolorthemeSimplePlusAIC.sty  beamerinnerthemeSimplePlusAIC.sty  main.tex
aibio2025/results/: TP_FP_TN_FN_acc_prec_recall_hb2.xlsx
d21/: biblio.bib  internal_review.text  main.tex  manolo.cls  refs.bib  task1.tex  task2.tex  task3-distillation.tex  task3-extraction.tex  task3-synthesis.tex
d22/: biblio.bib  main.tex  manolo.cls  task1.tex  task3-distillation.tex
dcoss2025/: IEEEtranDOI.bst  main.tex  refs.bib  review.html  tab_results.tex
dcoss2025/results/: TP_FP_TN_FN_acc_prec_recall_hb1.xlsx  avg_distance_hb1.xlsx  results.ods
drift-detectors/autoencoder/: pyproject.toml
drift-detectors/autoencoder/src/: loader.py  test.py  train.py
noise-analysis/: config.yaml  pyproject.toml
noise-analysis/src/: analyze.py  utils.py
quality-estimators/attn_autoencoder/: pyproject.toml
quality-estimators/autoencoder/: config.yaml  pyproject.toml
quality-estimators/autoencoder/src/: loader.py  model.py  test.py  train.py  utils.py
quality-estimators/classifier/: pyproject.toml
quality-estimators/classifier/src/: loader.py  model.py  test.py  train.py
quality-estimators/lstm_autoencoder/: pyproject.toml
quality-estimators/mne-tool/: pyproject.toml
quality-estimators/predictor/: pyproject.toml
quality-estimators/reconstructor/: config.yaml
(+15 files in other folders)
